--------------------------------------------------------------------

  Breaking changes

    * The `Config` struct has a two new fields:

      * Config.Buffer specifies the size of the buffer on the
        Asock.Msgr channel.

      * Config.TLSConfig is the *tls.Config instance which is needed
        to set up a TLS connection.  This was formerly an argument of
        asock.NewTLS().

    * client constructors have a new argument, `timeout`, which sets
      the number of milliseconds before read/write operations timeout.

  Additions and other changes

    * client has a new method, Read()

    * A special-casing of Config.Timeout for test purposes has been
      removed from the production asock code.

    * Read buffer in asock and client now defaults to 128 bytes (up
      from 64).


0.14.1 - 2015-05-19
--------------------------------------------------------------------

    * Documentation improvements


0.14.0 - 2015-05-19
--------------------------------------------------------------------

    * TLS support added via the asock & client NewTLS() methods.


0.13.0 - 2015-05-16
--------------------------------------------------------------------

    * `asock/client` package added

    * Documentation improvements


0.12.0 - 2015-03-28
--------------------------------------------------------------------

    * Msg now implements the error interface, so it will autostringify
      when passed to fmt.Println, log.Print, log.Fatal, etc.


0.11.1 - 2015-02-18
--------------------------------------------------------------------

    * Msg.Conn and Msg.Req are now uint (were int)

    * Documentation improvements


0.11.0 - 2015-02-16
--------------------------------------------------------------------

  Breaking changes

    * Argmode functionality is now per Dispatch function instead of
      per asock instance.

    * As a result, the signature of Dispatch has changed to
      'map[string]*DispatchFunc', where DispatchFunc is a new type