@@ -14,7 +14,7 @@ func TestConnNegTimeout(t *testing.T) {
 	d := make(Dispatch) // create Dispatch
 	d["echo"] = &DispatchFunc{echo, "split"} // and put a function in it
 	// instantiate an asocket
-	c := Config{"/tmp/test09.sock", -1, 32, All, nil}
+	c := Config{"/tmp/test09.sock", -1000, 32, All, nil}
 	as, err := NewUnix(c, d)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -37,10 +37,10 @@ func TestConnNegTimeout(t *testing.T) {
 	}
 	if msg.Txt != "ending session" {
 		t.Errorf("unexpected msg.Txt: %v", msg.Txt)
-	}	
+	}
 	if msg.Code != 197 {
 		t.Errorf("msg.Code should be 197 but got %v", msg.Code)
-	}	
+	}
 	// shut down asocket
 	as.Quit()
 }
